@@ -1,5 +1,6 @@
 <script type="text/javascript" src="webui/jquery.min.js"></script>
 <script type="text/javascript" src="webui/jquery.flot.min.js"></script>
+<script type="text/javascript" src="webui/jquery.flot.crosshair.js"></script>
 <style>
 .stat0 {
 }
