@@ -1,6 +1,7 @@
 <script type="text/javascript" src="webui/jquery.min.js"></script>
 <script type="text/javascript" src="webui/jquery.flot.min.js"></script>
 <script type="text/javascript" src="webui/jquery.flot.time.min.js"></script>
+<script type="text/javascript" src="webui/jquery.flot.crosshair.js"></script>
 
 <!-- **************************** BLOCK_FEES_BEGIN **************************** -->
 <div id="light" class="white_content" style="height:auto">
